18.2.7-ingress-http-redirect/nginx-web-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-http-redirect
  namespace: avi-feature
  labels:
    feature: ingress-http-redirect 
spec:
  replicas: 2
  selector:
    matchLabels:
      feature: ingress-http-redirect       
  template:
    metadata:
      labels:
        feature: ingress-http-redirect 
    spec:
      containers:
      - name: nginx-ingress-http-redirect 
        image: nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx
          readOnly: true
        - mountPath: /etc/nginx/ssl
          name: nginx-ssl
      volumes:
      - name: nginx
        configMap:
          name: nginx
      - name: nginx-ssl
        secret:
          secretName: nginx-ssl
