18.2.7-ingress-http-redirect/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-http-redirect
  namespace: avi-feature
  labels:
    feature: ingress-http-redirect 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: ingress-http-redirect
